--- a/index.html
+++ b/index.html
@@ -646,11 +646,9 @@
         <p><strong>To what extent does the design of this space contribute to positive interactions between human society and the environment?</strong></p>
       </div>
   
-      <p><strong>Objective:</strong> To explore the environmental conditions of various urban areas and present the findings through an interactive map.</p>
-      <p><strong>Hypothesis:</strong> The ecological comfort of urban zones is influenced by the amount of greenery, air pollution, and the quality of urban infrastructure.</p>
-  
-      <p style="margin-top: 20px;"><strong>Format:</strong> A website featuring a map that displays data collected from various zones. Users can compare different areas of the city and draw conclusions about their environmental comfort.</p>
-    </div>
+      <p><strong>Objective:</strong>Explore the environmental quality of different urban zones within a metropolis (Zones 1–6), focusing on factors such as soil and water composition, green spaces, noise levels, building density, and the comfort of urban infrastructure.
+        Create a web platform with an interactive map on the main page that allows users to explore and compare zones, helping them understand the differences in environmental comfort levels.</p>
+      </div>
   </section>
 
 
@@ -1466,7 +1464,9 @@
   <section class="subject-section" id="chemistry-section">
     <div class="about-container">
       <h2>Chemistry</h2>
-      <p>Some text...</p>
+      <p>By examining how the chemistry of soil and water reflects the condition of an urban environment, this multidisciplinary project allowed me to apply chemistry in a practical setting. Despite the difficulties I encountered with the titrations, particularly with regard to time management and limitations with soil filtration, I was still able to collect and evaluate significant data through partial titrations and pH testing. This gave me the opportunity to draw conclusions about how society's interactions with the environment are influenced by the maintenance of green areas, such as the ones in Parque das Nações.
+        Furthermore, this project made me realise that science is about connecting knowledge across subjects rather than just following isolated experiments. It has also improved my teamwork capacities as well as my scientific knowledge, in a real world context.
+        </p>
     </div>
   </section>
 
